--- a/private/templates/sbnext-common/components/player.twig
+++ b/private/templates/sbnext-common/components/player.twig
@@ -1,21 +1,18 @@
-<div id="container" style="background-color:black;color:white;width: 100%;margin: 0;">
+<div id="player-container">
     {% if (video.flags b-and 2) %}
         <div>
             {{ __("This video should be processing.") }}
         </div>
     {% else %}
         <!-- this is not the right location but i don't care -grkb 8/23/2022 -->
-        <script src="https://cdn.jsdelivr.net/npm/video.js@7.20.2/dist/video.min.js"
-                integrity="sha256-Val5EwMJw/DUOYKY9kjpCo3tLfUA/fPHWOkFHs9iKcs=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/video.js@7.20.2/dist/video-js.min.css"
-          integrity="sha256-MQILNoDAnXbaJT0pfW0/qpj9a1UcHHUYKduMEqn0oa0=" crossorigin="anonymous">
+		<script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
+		<link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
         <video
                 id="sb-video"
                 class="video-js"
                 controls
                 preload="auto"
                 poster="{{ video_thumbnail(video.video_id) }}"
-                data-setup="{}"
                 src="/dynamic/videos/{{ video.video_id }}.converted.mp4">
             <p class="vjs-no-js">
                 {{ __("To view this video please enable JavaScript.") }}
