various changes (see desc)
* Masthead is no longer borked on IE11 on main page.
* Added debug-only thing that shows all variables used by Twig.
* Made general user queries no longer giving out the password in the arrays.
* Remove icon_alt, used for scrapped "upload start" page.
* Remove videofields function from video.php and make it a variable in common.php.

--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -351,64 +351,6 @@ input[type]:not([type=file]):not([type=submit]):focus {
   }
 }
 
-.feature-icon {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 4rem;
-  height: 4rem;
-  margin-bottom: 1rem;
-  font-size: 2rem;
-  color: #fff;
-  border-radius: .75rem;
-}
-
-.icon-link {
-  display: inline-flex;
-  align-items: center;
-}
-
-.icon-link > .bi {
-  margin-top: .125rem;
-  margin-left: .125rem;
-  transition: transform .25s ease-in-out;
-  fill: currentColor;
-}
-
-.icon-link:hover > .bi {
-  transform: translate(.25rem);
-}
-
-.icon-square {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 3rem;
-  height: 3rem;
-  font-size: 1.5rem;
-  border-radius: .75rem;
-}
-
-.rounded-4 {
-  border-radius: .5rem;
-}
-
-.rounded-5 {
-  border-radius: 1rem;
-}
-
-.text-shadow-1 {
-  text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25);
-}
-
-.text-shadow-2 {
-  text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25);
-}
-
-.text-shadow-3 {
-  text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25);
-}
-
 .card-cover {
   background-repeat: no-repeat;
   background-position: center center;
@@ -769,7 +711,7 @@ input[type]:not([type=file]):not([type=submit]):focus {
   }
 }
 
-#myModal {
+#optionsModal, #debugModal {
   display: none;
 }
 
@@ -844,3 +786,5 @@ input[type]:not([type=file]):not([type=submit]):focus {
 @import "_header_message";
 /// Text \\\
 @import "_text";
+/// Browser-specific fixes \\\
+@import "_browser_shenanigans";
