--- a/private/templates/sbnext-desktop/components/_header.twig
+++ b/private/templates/sbnext-desktop/components/_header.twig
@@ -1,4 +1,4 @@
-<div id="masthead-container">
+<div id="masthead-container" {% if browser_info.legacy_masthead_fix == true %}class="position-relative-fix"{% endif %}>
     <div id="masthead">
         <div class="grid" style="margin-bottom: 17.5px;">
             <div class="col-md-10">
