--- a/private/scss-finalium/nostalgia.scss
+++ b/private/scss-finalium/nostalgia.scss
@@ -105,6 +105,14 @@ body {
   font: 12px Arial, Helvetica, sans-serif;
 }
 
+.button-large {
+  font-size: 17px;
+}
+
+.button-small {
+  font-size: 11px;
+}
+
 @each $state, $value in $theme-colors {
   .button-#{$state} {
 	border: 1px solid darken($value, 20%);
