--- a/private/templates/sbnext-common/login.twig
+++ b/private/templates/sbnext-common/login.twig
@@ -27,6 +27,6 @@
                 <br>
 				<p>{{ __("Don't have an account?") }} <a href="./register.php">{{ __("Register") }}</a>
             </form>
-			<p class="text-light">{{ __("If you have registered an account on PokTube or squareBracket, that account still exists on Qobo.") }}</p>
+			<p class="text-light center">{{ __("If you have registered an account on PokTube or squareBracket, that account still exists on Qobo.") }}</p>
         </div>
     {% endblock %}
