genericify a lot of shit

--- a/private/scss-finalium/_variables.scss
+++ b/private/scss-finalium/_variables.scss
@@ -36,7 +36,7 @@ $dark: #343a40;
 $teal-color: $teal;
 $orange-color: $orange;
 
-$primary: $pink;
+$primary: $blue;
 $secondary: $gray-100;
 $success: $green;
 $info: $cyan;
