--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -9,7 +9,7 @@
         <div class="card">
             <div class="card-body">
                 <div style="padding:5px;">
-                    <h1>{{ __("About this instance of Qobo") }}</h1>
+                    <h1>{{ __("About %s", [ website_branding.name ]) }}</h1>
                     <p>{{ __("Some statistics may not be accurate.") }}</p>
                 </div>
                 <div class="grid">
