--- a/private/templates/sbnext-common/_layout_chaziz.twig
+++ b/private/templates/sbnext-common/_layout_chaziz.twig
@@ -2,7 +2,7 @@
 <html lang="{{ __("en-US") }}">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %} - Qobo</title>
+    <title>{% block title %}{% endblock %} - {{ website_branding.name }}</title>
     {% block head %}{% endblock %}
     <link rel="manifest" href="/assets/icons/site.webmanifest">
     <link rel="shortcut icon" href="/assets/icons/favicon.ico">
@@ -10,8 +10,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
     <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#1b93ff">
-    <meta name="apple-mobile-web-app-title" content="Qobo">
-    <meta name="application-name" content="Qobo">
+    <meta name="apple-mobile-web-app-title" content="{{ website_branding.name }}">
+    <meta name="application-name" content="{{ website_branding.name }}">
     <meta name="msapplication-TileColor" content="#1d3fc4">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons@latest/iconfont/tabler-icons.min.css">
