move replaceable assets to folder called "placeholder"
fun fact: this generic sb logo was the first john-designed prototype logo and was made a year ago. ouch.

--- a/private/scss-finalium/nostalgia.scss
+++ b/private/scss-finalium/nostalgia.scss
@@ -34,7 +34,7 @@ $gray-900: #242424;
 $light: #FFF;
 $dark: #000;
 
-$primary: $pink;
+$primary: $blue;
 $secondary: $light;
 $success: $green;
 $info: $cyan;
