--- a/private/templates/sbnext-common/components/nostalgia/_header.twig
+++ b/private/templates/sbnext-common/components/nostalgia/_header.twig
@@ -1,6 +1,6 @@
 <div class="masthead-container">
 	<div class="masthead">
-		<a href="/index.php"><img class="logo" src="/assets/nostalgia/logo.png" alt="Qobo" border="0"></a>
+		<a href="/index.php"><img class="logo" src="{{ website_branding.assets_location }}/logo-wordmark-nostalgia.png" alt="{{ website_branding.name }}" border="0"></a>
 		<div class="masthead-search">
 			<form method="GET" action="search.php">
 				<input class="masthead-input" type="text" value="" name="query" size="30" maxlength="128">
