--- a/private/templates/sbnext-desktop/components/_header.twig
+++ b/private/templates/sbnext-desktop/components/_header.twig
@@ -4,7 +4,7 @@
             <div class="col-md-10">
                 <div id="header-main">
                     <a href="/" id="logo-container"><img id="logo"
-                                                         src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png"></a>
+                                                         src="{{ website_branding.assets_location }}/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png"></a>
                     {% if isMaintenance != true %}
 					<div class="masthead-links-container">
 						<div class="masthead-links">
