--- a/private/templates/sbnext-common/components/videothumbnail.twig
+++ b/private/templates/sbnext-common/components/videothumbnail.twig
@@ -1,2 +1,2 @@
-{% if file_exists %}{% set imgSrcPath = '/dynamic/thumbnails/' ~ data ~ '.png' %}{% autoescape %}{{ imgSrcPath | raw }}{% endautoescape %}{% else %}{% set imgSrcPath = '/assets/placeholder
+{% if file_exists %}{% set imgSrcPath = '/dynamic/thumbnails/' ~ data ~ '.png' %}{% autoescape %}{{ imgSrcPath | raw }}{% endautoescape %}{% else %}{% set imgSrcPath = website_branding.assets_location ~ '/placeholder
 .png' %}{% autoescape %}{{ imgSrcPath | raw }}{% endautoescape %}{% endif %}
