fix some issues

--- a/private/templates/sbnext-desktop/browse.twig
+++ b/private/templates/sbnext-desktop/browse.twig
@@ -39,7 +39,7 @@
                         <h2>{{ __("There are no videos of that category.") }}</h2>
                         <hr>
                         <p>{{ __("You could create one!") }}</p>
-                        <div style="text-align:center;margin:auto"><img src="../assets/logo_monochrome.png" alt="{{ website_branding.name }}" style="max-width:150px;"></div>
+                        <div style="text-align:center;margin:auto"><img src="{{ website_branding.assets_location }}/logo_monochrome.png" alt="{{ website_branding.name }}" style="max-width:150px;"></div>
                     </div>
                 {% endfor %}
 
