--- a/private/templates/sbnext-common/_error.twig
+++ b/private/templates/sbnext-common/_error.twig
@@ -10,7 +10,7 @@
 				<p>{{ err_message }}</p>
 			</div>
 			<div class="col-md-8 right">
-				<img src="../assets/logo.png" alt="{{ website_branding.name }}" style="max-width:150px;">
+				<img src="{{ website_branding.assets_location }}/logo.png" alt="{{ website_branding.name }}" style="max-width:150px;">
 			</div>
 		</div>
 	</div>
