fix some of the sonarcloud complaints

--- a/private/templates/sbnext-common/recentchanges.twig
+++ b/private/templates/sbnext-common/recentchanges.twig
@@ -14,7 +14,7 @@
 		{% if date != -1 %}</ul>{% endif %}
 
 		{% set date = rev.time | date('Y-m-d')%}
-		<b>{{ date }}</b>
+		<strong>{{ date }}</strong>
 		<ul>
 	{% endif %}
 	<li>
