--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -56,7 +56,7 @@
                     </div>
                     <div class="card card-body-fat" id="About">
                         <div class="grid">
-                            <p><b>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</b></p>
+                            <p><strong>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</strong></p>
                             <p>{{ video.description }}</p>
                             <div class="description-extra">
                                 <ul>
