--- a/private/templates/sbnext-common/components/browsevideobox.twig
+++ b/private/templates/sbnext-common/components/browsevideobox.twig
@@ -3,7 +3,7 @@
         <div class="grid"><a href="watch.php?v={{ data.video_id }}">
                 <div class="col" style="margin-bottom:15px">
                     <div class="img-thumbnail">
-                        <img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
+                        <img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}" alt="{{ data.title }}">
                     </div>
                 </div>
             </a>
