--- a/private/scss-finalium/cheeserox.scss
+++ b/private/scss-finalium/cheeserox.scss
@@ -21,8 +21,7 @@ $theme-colors: (
 );
 
 .main-content {
-	background-color:#ff9900;
-	background: linear-gradient(to bottom, #ffc578 0%,#fb9d23 100%);
+	background: #ff9900 linear-gradient(to bottom, #ffc578 0%,#fb9d23 100%);
 }
 
 a:link,
