--- a/private/templates/sbnext-common/admin.twig
+++ b/private/templates/sbnext-common/admin.twig
@@ -6,6 +6,7 @@
 		<h1>Admin panel</h1>
 		<p>{{ __("Currently running Qobo version %s (commit %s) on %s.", [version, git_commit(), operating_system()]) }}</p>
 		<table style="width: 100%;">
+			<caption>{{ __("The latest") }}</caption>
 			<tr>
 				<td class="nb" style="width:33%; vertical-align:top;">
 					<table class="c1">
