--- a/private/templates/sbnext-common/components/icon.twig
+++ b/private/templates/sbnext-common/components/icon.twig
@@ -1,1 +1,1 @@
-<i class="ti ti-{{ icon }}" style="font-size: {{ size }}px"></i>
+<i class="ti ti-{{ icon }}" style="font-size: {{ size }}px" aria-hidden="true"></i>
