--- a/private/templates/sbnext-common/components/player.twig
+++ b/private/templates/sbnext-common/components/player.twig
@@ -5,19 +5,23 @@
         </div>
     {% else %}
         <!-- this is not the right location but i don't care -grkb 8/23/2022 -->
+		{% if browser_info.legacy_disable_videojs != true %}
 		<script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
 		<link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
+		{% endif %}
         <video
                 id="sb-video"
                 class="video-js"
                 controls
                 preload="auto"
                 poster="{{ video_thumbnail(video.video_id) }}"
+				type="video/mp4"
                 src="/dynamic/videos/{{ video.video_id }}.converted.mp4">
             <p class="vjs-no-js">
                 {{ __("To view this video please enable JavaScript.") }}
             </p>
         </video>
+		{% if browser_info.legacy_disable_videojs != true %}
         <script>
             var player = videojs('sb-video', {
                 sourceOrder: true,
@@ -36,5 +40,6 @@
                 type: 'application/dash+xml'
             }]);
         </script>
+		{% endif %}
     {% endif %}
 </div>
